packages/parser/test/tokenizer/E0009-binary.txt
0b1010a10
===== err =====
anonymous:1:1: SyntaxError: E0009 - Invalid binary integer literal
1 | 0b1010a10
  | ~~~~~~~~~
